// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`model annotation test annotation get hasMany relation: has many 1`] = `
Object {
  "articles": Array [
    FedacoRelationColumn {
      "_getRelation": [Function],
      "isRelation": true,
      "related": [Function],
      "type": "HasMany",
    },
  ],
  "id": Array [
    FedacoColumn {},
  ],
}
`;

exports[`model annotation test annotation hasMany: has many 1`] = `
Object {
  "columnFoo": Array [
    FedacoRelationColumn {
      "_getRelation": [Function],
      "isRelation": true,
      "related": [Function],
      "type": "HasMany",
    },
  ],
}
`;

exports[`model annotation test annotation hasOne: has one 1`] = `
Object {
  "columnFoo": Array [
    FedacoRelationColumn {
      "_getRelation": [Function],
      "isRelation": true,
      "type": "HasOne",
    },
  ],
}
`;

exports[`model annotation test relation annoation: meta 1`] = `
Object {
  "columnFoo": Array [
    FedacoRelationColumn {
      "_getRelation": [Function],
      "isRelation": true,
      "type": "HasOne",
    },
  ],
}
`;
